--- a/docs/progressReports/2020-11-03.md
+++ b/docs/progressReports/2020-11-03.md
@@ -2,7 +2,7 @@
 
 *03 November 2020*
 
-## Meeting attendance:
+## Meeting attendance
 
 - Daniel Ellis UP940148
 - Shadille Samuels UP939775
@@ -11,11 +11,11 @@
 - Oliver Green UP936979
 - Glanyell White UP960959
 
-## Progress since last report:
+## Progress since last report
 
 * All members have filled in their sections for CW1 1.3
 
-## Tasks for next meeting:
+## Tasks for next meeting
 
 * Finish all sections of CW1
 
@@ -23,7 +23,7 @@
 
 ---
 
-# Seen and approved by:
+## Seen and approved by
 
 * [x] Daniel Ellis UP940148
 * [x] Shadille Samuels UP939775
