seen and approved

--- a/docs/progressReports/2020-12-01.md
+++ b/docs/progressReports/2020-12-01.md
@@ -32,4 +32,4 @@
 * [ ] Glen Abossey UP939741
 * [ ] Zain Ahmed UP932700
 * [ ] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+* [x] Glanyell White UP960959
