Progress Reports Approved UP939775

--- a/docs/progressReports/2020-11-27.md
+++ b/docs/progressReports/2020-11-27.md
@@ -33,7 +33,7 @@
 ## Seen and approved by
 
 * [x] Daniel Ellis UP940148
-* [ ] Shadille Samuels UP939775
+* [x] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [ ] Zain Ahmed UP932700
 * [ ] Oliver Green UP936979
