--- a/docs/progressReports/2020-12-01.md
+++ b/docs/progressReports/2020-12-01.md
@@ -28,7 +28,7 @@
 ## Seen and approved by
 
 * [X] Daniel Ellis UP940148
-* [ ] Shadille Samuels UP939775
+* [x] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [ ] Zain Ahmed UP932700
 * [ ] Oliver Green UP936979
