--- a/docs/progressReports/2020-11-06.md
+++ b/docs/progressReports/2020-11-06.md
@@ -5,6 +5,7 @@
 ## Meeting attendance
 
 * Daniel Ellis UP940148
+* Zain Ahmed UP932700
 
 ## Progress since last report
 
@@ -25,6 +26,6 @@
 * [x] Daniel Ellis UP940148
 * [x] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
-* [ ] Zain Ahmed UP932700
+* [x] Zain Ahmed UP932700
 * [ ] Oliver Green UP936979
 * [ ] Glanyell White UP960959
