--- a/docs/progressReports/2020-12-08.md
+++ b/docs/progressReports/2020-12-08.md
@@ -29,6 +29,6 @@
 * [X] Daniel Ellis UP940148
 * [x] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
-* [ ] Zain Ahmed UP932700
+* [x] Zain Ahmed UP932700
 * [ ] Oliver Green UP936979
 * [x] Glanyell White UP960959
