--- a/docs/progressReports/2020-11-06.md
+++ b/docs/progressReports/2020-11-06.md
@@ -27,5 +27,5 @@
 * [x] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [x] Zain Ahmed UP932700
-* [ ] Oliver Green UP936979
+* [x] Oliver Green UP936979
 * [ ] Glanyell White UP960959
