--- a/docs/progressReports/2020-11-27.md
+++ b/docs/progressReports/2020-11-27.md
@@ -36,5 +36,5 @@
 * [x] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [x] Zain Ahmed UP932700
-* [ ] Oliver Green UP936979
+* [x] Oliver Green UP936979
 * [x] Glanyell White UP960959
