Updated Progress Report

--- a/docs/progressReports/2021-02-22.md
+++ b/docs/progressReports/2021-02-22.md
@@ -12,11 +12,12 @@
 ## Progress since last report
 
 - Use case tables done
-- Decided which pages to use for CW3.4
+- CW3.4 almost completed
 
 ## Tasks for next meeting
 
 - Daniel to look into sequence diagrams for CW3.2
+- Ollie to look into system architecture for CW3.3
 
 - Start polishing and proof-reading work before CW3 submission date
 
