--- a/docs/progressReports/2021-02-16.md
+++ b/docs/progressReports/2021-02-16.md
@@ -26,5 +26,5 @@
 * [ ] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [ ] Zain Ahmed UP932700
-* [ ] Oliver Green UP936979
+* [X] Oliver Green UP936979
 * [ ] Glanyell White UP960959
