--- a/docs/progressReports/2021-02-16.md
+++ b/docs/progressReports/2021-02-16.md
@@ -22,7 +22,7 @@
 
 ## Seen and approved by
 
-* [ ] Daniel Ellis UP940148
+* [X] Daniel Ellis UP940148
 * [ ] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [ ] Zain Ahmed UP932700
