--- a/docs/progressReports/2021-01-19.md
+++ b/docs/progressReports/2021-01-19.md
@@ -29,6 +29,6 @@
 * [X] Daniel Ellis UP940148
 * [ ] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
-* [ ] Zain Ahmed UP932700
+* [X] Zain Ahmed UP932700
 * [X] Oliver Green UP936979
 * [ ] Glanyell White UP960959
