--- a/docs/progressReports/2021-02-22.md
+++ b/docs/progressReports/2021-02-22.md
@@ -28,7 +28,7 @@
 ## Seen and approved by
 
 * [X] Daniel Ellis UP940148
-* [ ] Shadille Samuels UP939775
+* [X] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
 * [X] Zain Ahmed UP932700
 * [X] Oliver Green UP936979
