--- a/docs/progressReports/2020-11-06.md
+++ b/docs/progressReports/2020-11-06.md
@@ -25,7 +25,7 @@
 
 * [x] Daniel Ellis UP940148
 * [x] Shadille Samuels UP939775
-* [ ] Glen Abossey UP939741
+* [x] Glen Abossey UP939741
 * [x] Zain Ahmed UP932700
 * [x] Oliver Green UP936979
 * [ ] Glanyell White UP960959
