--- a/docs/progressReports/2021-02-16.md
+++ b/docs/progressReports/2021-02-16.md
@@ -24,7 +24,7 @@
 
 * [X] Daniel Ellis UP940148
 * [X] Shadille Samuels UP939775
-* [ ] Glen Abossey UP939741
+* [X] Glen Abossey UP939741
 * [X] Zain Ahmed UP932700
 * [X] Oliver Green UP936979
 * [ ] Glanyell White UP960959
