--- a/docs/progressReports/2020-11-06.md
+++ b/docs/progressReports/2020-11-06.md
@@ -28,4 +28,4 @@
 * [x] Glen Abossey UP939741
 * [x] Zain Ahmed UP932700
 * [x] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+* [x] Glanyell White UP960959
