--- a/docs/progressReports/2021-02-15.md
+++ b/docs/progressReports/2021-02-15.md
@@ -31,4 +31,4 @@
 * [x] Glen Abossey UP939741
 * [X] Zain Ahmed UP932700
 * [X] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+* [X] Glanyell White UP960959
