--- a/docs/progressReports/2021-02-22.md
+++ b/docs/progressReports/2021-02-22.md
@@ -32,4 +32,4 @@
 * [X] Glen Abossey UP939741
 * [X] Zain Ahmed UP932700
 * [X] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+* [X] Glanyell White UP960959
