Updated Progress Report

--- a/docs/progressReports/2021-03-18.md
+++ b/docs/progressReports/2021-03-18.md
@@ -20,7 +20,7 @@
 - Start working on video demo resources
 - Set up `eslint-config-portsoc` on code repo
 
-# On schedule: YES
+# On schedule: NO
 
 ---
 
