--- a/ProgressReports/2021-03-15-00-00.md
+++ b/ProgressReports/2021-03-15-00-00.md
@@ -30,6 +30,6 @@
 * [X] Daniel Ellis UP940148
 * [ ] Shadille Samuels UP939775
 * [ ] Glen Abossey UP939741
-* [ ] Zain Ahmed UP932700
+* [x] Zain Ahmed UP932700
 * [ ] Oliver Green UP936979
 * [ ] Glanyell White UP960959
