--- a/ProgressReports/2021-03-30-16-30.md
+++ b/ProgressReports/2021-03-30-16-30.md
@@ -1,6 +1,6 @@
 # Progress Report
 
-*30 March 2021*
+_30 March 2021_
 
 ## Meeting attendance
 
@@ -28,9 +28,9 @@
 
 ## Seen and approved by
 
-* [X] Daniel Ellis UP940148
-* [ ] Shadille Samuels UP939775
-* [ ] Glen Abossey UP939741
-* [ ] Zain Ahmed UP932700
-* [ ] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+- [x] Daniel Ellis UP940148
+- [ ] Shadille Samuels UP939775
+- [ ] Glen Abossey UP939741
+- [ ] Zain Ahmed UP932700
+- [x] Oliver Green UP936979
+- [ ] Glanyell White UP960959
