--- a/ProgressReports/2021-03-18-00-00.md
+++ b/ProgressReports/2021-03-18-00-00.md
@@ -1,6 +1,6 @@
 # Progress Report
 
-*18 March 2021*
+_18 March 2021_
 
 ## Meeting attendance
 
@@ -26,9 +26,9 @@
 
 ## Seen and approved by
 
-* [X] Daniel Ellis UP940148
-* [ ] Shadille Samuels UP939775
-* [ ] Glen Abossey UP939741
-* [X] Zain Ahmed UP932700
-* [ ] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+- [x] Daniel Ellis UP940148
+- [ ] Shadille Samuels UP939775
+- [ ] Glen Abossey UP939741
+- [x] Zain Ahmed UP932700
+- [x] Oliver Green UP936979
+- [ ] Glanyell White UP960959
