--- a/ProgressReports/2021-04-02-16-10.md
+++ b/ProgressReports/2021-04-02-16-10.md
@@ -1,6 +1,6 @@
 # Progress Report
 
-*02 April 2021*
+_02 April 2021_
 
 ## Meeting attendance
 
@@ -26,9 +26,9 @@
 
 ## Seen and approved by
 
-* [X] Daniel Ellis UP940148
-* [ ] Shadille Samuels UP939775
-* [ ] Glen Abossey UP939741
-* [ ] Zain Ahmed UP932700
-* [ ] Oliver Green UP936979
-* [ ] Glanyell White UP960959
+- [x] Daniel Ellis UP940148
+- [ ] Shadille Samuels UP939775
+- [ ] Glen Abossey UP939741
+- [ ] Zain Ahmed UP932700
+- [x] Oliver Green UP936979
+- [ ] Glanyell White UP960959
